9/28 styles edits for grading

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,27 @@ nav {
     background-color : steelblue;
     padding: 10px; 
 }
+nav a {
+    color: white;
+    display: block;
+    padding: 20px;
+}
+
+h1 {
+    color: steelblue;
+}
+
+img {
+    width: 150px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px grey;
+}
+
+p {
+    padding: 10px;
+}
 
 main {
     max-width: 840px;
@@ -16,6 +37,7 @@ aside {
     color: #333;
     text-align: center;
 }
+
 aside img {
     width: 200px;
     height: auto;
