--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,14 @@
+:root {
+    --color-white: #fff;
+    --color-black: #000;
+}
+
 nav {
     background-color : steelblue;
     padding: 10px; 
 }
 nav a {
-    color: white;
+    color: var(--color-white);
     display: block;
     padding: 20px;
 }
@@ -33,8 +38,8 @@ aside {
     margin: 1rem;
     border: 1px solid rgba(0,0,0,.2);
     padding: 1rem;
-    background-color:#eee;
-    color: #333;
+    background-color:var(--color-white);
+    color: var(--color-black);
     text-align: center;
 }
 
@@ -54,6 +59,6 @@ p {
 
 footer {
     margin-top: 15px;
-    border-top: 1px solid #000;
+    border-top: 1px solid var(--color-black);
     text-align: center;
 }
