--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,7 +28,12 @@ a {
 
 .no-underline {
     text-decoration: none;
-}   
+}
+
+a.no-underline img {
+    width: 24px;
+    height: 24px;
+}
 
 button {
     background-color: var(--secondary-color);
@@ -63,6 +68,16 @@ button {
     color: var(--text-color);
     padding: 10px;
     max-width: 300px; 
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+img[alt="Company Logo"] {
+    width: 50px;
+    height: 50px;
 }
 
 .hero article img {
