--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -84,3 +84,9 @@ img[alt="Company Logo"] {
     float: right;
     margin-left: 10px;
 }
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
